Display and Delete Property

--- a/app/src/main/res/layout/activity_property_fragment.xml
+++ b/app/src/main/res/layout/activity_property_fragment.xml
@@ -10,5 +10,6 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/propertyList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:paddingBottom="120dp" />
 </FrameLayout>
