--- a/app/src/main/res/layout/activity_owner_home.xml
+++ b/app/src/main/res/layout/activity_owner_home.xml
@@ -51,11 +51,11 @@
     <FrameLayout
         android:id="@+id/framelayout"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nav">
+        app:layout_constraintTop_toBottomOf="@+id/main_toolbar1">
 
     </FrameLayout>
 
