--- a/app/src/main/res/layout/activity_basics.xml
+++ b/app/src/main/res/layout/activity_basics.xml
@@ -4,7 +4,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:fillViewport="true"
-        tools:context=".basics">
+        tools:context=".addBasic">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
