--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -6,7 +6,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fillViewport="true"
-    tools:context=".createAccount">
+    tools:context=".userCreateAccount">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -57,7 +57,7 @@
             app:layout_constraintTop_toBottomOf="@+id/edit" />
 
         <TextView
-            android:id="@+id/gender"
+            android:id="@+id/gendertxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -80,14 +80,14 @@
             android:layout_marginTop="24dp"
             android:autofillHints="Choose One"
             android:entries="@array/gender"
-            app:layout_constraintBottom_toBottomOf="@+id/gender"
+            app:layout_constraintBottom_toBottomOf="@+id/gendertxt"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/gender"
+            app:layout_constraintStart_toEndOf="@+id/gendertxt"
             app:layout_constraintTop_toBottomOf="@+id/last_name" />
 
         <TextView
-            android:id="@+id/dob"
+            android:id="@+id/dobtxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
@@ -97,7 +97,7 @@
             android:text="Date Of Birth: "
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/gender" />
+            app:layout_constraintTop_toBottomOf="@+id/gendertxt" />
 
         <TextView
             android:id="@+id/date_pick"
@@ -112,7 +112,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textSize="20dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/dob"
+            app:layout_constraintStart_toEndOf="@+id/dobtxt"
             app:layout_constraintTop_toBottomOf="@+id/genderChoice" />
 
         <EditText
@@ -131,10 +131,10 @@
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dob" />
+            app:layout_constraintTop_toBottomOf="@+id/dobtxt" />
 
         <EditText
-            android:id="@+id/reg_email"
+            android:id="@+id/email"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -209,7 +209,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/reg_email" />
+            app:layout_constraintTop_toBottomOf="@+id/email" />
 
         <TextView
             android:id="@+id/edit"
