--- a/app/src/main/res/layout/fragment_frag_ten_likes.xml
+++ b/app/src/main/res/layout/fragment_frag_ten_likes.xml
@@ -1,15 +1,14 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragProperty">
+    tools:context=".fragTenLikes">
 
     <!-- TODO: Update blank fragment layout -->
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/propertyList"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="120dp" />
+        android:text="@string/hello_blank_fragment" />
+
 </FrameLayout>
