--- a/app/src/main/res/layout/fragment_ten_messages.xml
+++ b/app/src/main/res/layout/fragment_ten_messages.xml
@@ -1,15 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragProperty">
+    tools:context=".fragTenMessages">
 
     <!-- TODO: Update blank fragment layout -->
-
-
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/propertyList"
+        android:id="@+id/tenmessageslist"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="120dp" />
+
 </FrameLayout>
